Complete user register and created swagger files
