# docs/swagger.yaml
@@ -39,6 +39,45 @@ definitions:
         type: boolean
       meta: {}
     type: object
+  controllers.UserInputForm:
+    properties:
+      first_name:
+        type: string
+      id:
+        type: string
+      is_staff:
+        type: boolean
+      is_superuser:
+        type: boolean
+      last_name:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - first_name
+    - last_name
+    - password
+    - username
+    type: object
+  models.User:
+    properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: string
+      last_name:
+        type: string
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
   utils.APIError:
     properties:
       error_code:
@@ -76,4 +115,23 @@ paths:
           schema:
             $ref: '#/definitions/controllers.OauthTokenResponse'
       summary: Get Oauth bearer token
+  /user/register:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Create user
+        in: body
+        name: newUser
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.UserInputForm'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/models.User'
+      summary: Create user
 swagger: "2.0"
