# models/user.go
@@ -11,14 +11,14 @@ import (
 )
 
 type User struct {
-	gorm.Model
+	BaseModel
 	ID           *string `json:"id"`
-	First_name   *string `json:"first_name" binding:"required"       gorm:"not null"`
-	Last_name    *string `json:"last_name"  binding:"required"       gorm:"not null"`
-	Username     *string `json:"username"   binding:"required,email" gorm:"not null;unique"`
-	Password     *string `json:"password"   binding:"required"       gorm:"not null"`
-	Is_superuser *bool   `                                           gorm:"not null;default:false"`
-	Is_staff     *bool   `                                           gorm:"not null;default:false"`
+	First_name   *string `json:"first_name" gorm:"not null,primarykey"`
+	Last_name    *string `json:"last_name"  gorm:"not null"`
+	Username     *string `json:"username"   gorm:"not null;unique"`
+	Password     *string `json:"-"          gorm:"not null"`
+	Is_superuser *bool   `json:"-"          gorm:"not null;default:false"`
+	Is_staff     *bool   `json:"-"          gorm:"not null;default:false"`
 }
 
 func (u *User) String() string {
